# NexusBrowser

./: .gitignore  Instruction.md  README.md  app.js  index.html  styles.css
Docs/: Tauri_Full_Docs.md
frontend/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
