[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["unstable"] }
tauri-plugin-log = "2.0.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
open = "5"
futures = "0.3.31"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4.42"
url = "2.5"
redis = { version = "0.25", default-features = false }
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
